@@ -903,11 +903,16 @@ sub _postServiceHook
     my ($self, $enabled) = @_;
 
     if ($enabled) {
+        # Wait max of 5 seconds until named is listening
         my $nTry = 0;
         do {
             sleep(1);
-        } while ( $nTry < 5 and (not $self->_isNamedListening()));
-        if ( $nTry < 5 ) {
+        } while (($nTry < 5) and (not $self->_isPortListening(53)));
+        # Do nothing if Kerberos is not listening
+        if (($nTry < 5) and $self->_isPortListening(88)) {
+            my $hostname = $self->global()->modInstance('sysinfo')->hostName();
+            my $keytabPath = EBox::Samba::SAMBA_DNS_KEYTAB();
+            EBox::Sudo::root("kinit -k -t $keytabPath dns-$hostname");
             foreach my $cmd (@{$self->{nsupdateCmds}}) {
                 EBox::Sudo::root($cmd);
                 my ($filename) = $cmd =~ m:\s(.*?)$:;
@@ -1508,21 +1513,21 @@ sub _launchNSupdate
 {
     my ($self, $fh) = @_;
 
-    my $cmd = NS_UPDATE_CMD . ' -l -t 10 ' . $fh->filename();
+    my $cmd = NS_UPDATE_CMD . ' -g -t 10 ' . $fh->filename();
     $self->{nsupdateCmds} = [] unless exists $self->{nsupdateCmds};
     push (@{$self->{nsupdateCmds}}, $cmd);
     $fh->unlink_on_destroy(0);
 }
 
-# Check if named is listening
-sub _isNamedListening
+# Check if port is listening
+sub _isPortListening
 {
-    my ($self) = @_;
+    my ($self, $port) = @_;
 
     my $sock = new IO::Socket::INET(PeerAddr => '127.0.0.1',
-                                    PeerPort => 53,
+                                    PeerPort => $port,
                                     Proto    => 'tcp');
-    if ( $sock ) {
+    if ($sock) {
         close($sock);
         return 1;
     } else {
