@@ -1,4 +1,5 @@
 5.0
+	+ DNS updates now done via GSS-TSIG no longer require custom samba patch
 	+ Set version to 5.0
 4.2.1
 	+ Forbid use of loopback address as forwarder
